# badcv_model_factory

./: .dockerignore  .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  explore_model.ipynb  how_to_explore_model.ipynb  pyproject.toml  raw_to_jpeg.py  requirements_raw_to_jpeg.txt
.github/workflows/: main.yml  raw_to_jpeg_automation.yml
badminton_project/run_v1/: args.yaml
containers/flask_ctn_dir/: flask_app.py  pyproject.toml
containers/host/: Dockerfile.flask  flask_app.py  pyproject.toml
containers/mcp_server/: Dockerfile.mcp_server  config.py  main.py  resources.py  tools.py
containers/mcp_server_ctn_dir/: config.py  main.py  pyproject.toml  resources.py  tools.py
containers/mcp_server_ctn_dir/badia_server_files/: placeholder.txt
datas_server/fiches_techniques/: préparation_physique.txt  prévention_des_blessures.txt  stratégie_double_dame.txt  stratégie_double_homme.txt  stratégie_mixte.txt  stratégie_simple.txt  tactique_double.txt  tactique_mixte.txt  tactique_simple.txt  technique_amorti_fond_de_court.txt  technique_contre_amorti.txt  technique_dégagé_défensif.txt  technique_dégagé_offensif.txt  technique_reverse_slice.txt  technique_sercice_coup_droit.txt  technique_service_revers.txt  technique_smash.txt
datas_server/labels/: train.cache  val.cache
flask_ctn_dir/: Dockerfile.flask  flask_app.py
tests_unitaires/: test_mcp_logic.py  tests_unitaires.py
yolo_data/: badminton.yaml  test_lines.py  train_ultralytics.py  train_ultralytics_old_but_good_working.py
yolo_data_videos_amatrices/: lisez_moi.txt
(+171 files in other folders)
