[project]
name = "badia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.13.0",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pillow-heif>=1.1.1",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "ultralytics>=8.3.240",
    "wandb>=0.25.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.pylint.master]
ignore = [".venv", "venv", "dist"]
recursive = "yes"
